--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,13 +17,23 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
+      - name: "Setup Gradle cache"
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: Setup JDK 8
         uses: actions/setup-java@v2
         with:
           java-version: 8
           distribution: adopt
 
-      - name: Setup Git identity
+      - name: Set Git identity
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
