--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Setup Maven cache
         uses: actions/cache@v3
@@ -39,6 +39,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: build
+          read-only: false
 
       - name: Paperclip
         run: |
