--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Setup Maven cache
         uses: actions/cache@v3
@@ -38,3 +38,4 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: build
+          read-only: false
