--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,10 +17,10 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Setup JDK 8
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: 8
-          distribution: adopt
+          distribution: temurin
 
       - name: Set Git identity
         run: |
