Don't apply upstream patches in panda patch
Changes:
* Only apply PandaSpigot patches in "patch" command.
* Removed previous "install" command.
* Renamed "setup" command to "install".
* Added "setup" command to do what "patch" previously did.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         run: ./panda setup
 
       - name: Apply patches
-        run: ./panda patch
+        run: ./panda setup
 
       - name: Build
         uses: burrunan/gradle-cache-action@v1
