--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         run: ./panda setup
 
       - name: Apply patches
-        run: ./panda setup
+        run: ./panda patch
 
       - name: Build
         uses: burrunan/gradle-cache-action@v1
