--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,17 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ 16 ]
+      fail-fast: true
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup JDK 8
+      - name: Setup JDK
         uses: actions/setup-java@v3
         with:
-          java-version: 8
+          java-version: ${{ matrix.java }}
           distribution: temurin
 
       - name: Set Git identity
