--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 16 ]
+        java: [ 8, 11, 17 ]
       fail-fast: true
     steps:
       - uses: actions/checkout@v3
