--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           # npm cache files are stored in `~/.npm` on Linux/macOS
           path: ~/base
-          key: cache-paper-base
+          key: cache-paper-base-master
       - if: ${{ steps.cache-base.outputs.cache-hit != 'true' }}
         name: Setup build environment
         run: ./panda setup
