--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           cache-name: cache-paper-base
         with:
           # npm cache files are stored in `~/.npm` on Linux/macOS
-          path: ~/base
+          path: ./base
           key: cache-paper-base-master
       - if: ${{ steps.cache-base.outputs.cache-hit != 'true' }}
         name: Setup build environment
